chnaged the global file

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.33.3",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.5",
     "yup": "^1.4.0"
   },
